2000-04-05  Jim Blandy  <jimb@redhat.com>

	* solib.c (update_solib_list): New function.
	(solib_add): Call update_solib_list, and then read symbols.
	(info_sharedlibrary_command): Call update_solib_list, not
	solib_add.

2000-04-05  Scott Bambrough <scottb@netwinder.org>

	* arm-linux-tdep.c: Resolve implicit function declarations by 
	including target.h and value.h.  Inclusion of symtab.h is
	no longer needed.

2000-04-05  Scott Bambrough <scottb@netwinder.org>

	* arm-linux-tdep.c: New file.
	* arm-linux-nat.c (fetch_fpregs): Remove unused code.
	(arm_get_longjmp_target): Moved it and all defines 
	it uses to arm-linux-tdep.c.
	(arm_linux_extract_return_value): Moved to
	arm-linux-tdep.c.
	* config/arm/linux.mt: Add arm-linux-tdep.c to TDEPFILES.

2000-04-04  Nick Duffek  <nsd@cygnus.com>

	* infrun.c (handle_inferior_event): Call target_mourn_inferior
	instead of kill_target.

2000-04-04  Daniel Berlin  <dan@cgsoftware.com>

	* TODO: Make note of various C++ things i have planned for 5.1.

Tue Apr  4 12:13:19 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* printcmd.c (print_scalar_formatted): Use local variable ptr_bit
 	in shift.  Stop GCC thinking it has a shift overflow.

2000-04-03  H.J. Lu  <hjl@gnu.org>

	* TODO: Remove the regex entry.

2000-04-03  H.J. Lu  <hjl@gnu.org>

	* gdb_regex.h: New. Include "regex.h" if USE_INCLUDED_REGEX
	is defined and <regex.h> otherwise.

        * irix5-nat.c: Include "gdb_regex.h" instead of "gnu-regex.h".
	* monitor.c: Likewise.
	* osfsolib.c: Likewise.
	* solib.c: Likewise.
	* source.c: Likewise.
	* symtab.c: Likewise.

	* Makefile.in (REGEX): Changed to @REGEX@.
	(REGEX_CFLAGS): New.
	(REGEX1): Removed.
	(ADD_DEPS): Use $(REGEX) instead of $(REGEX1).
	(INTERNAL_WARN_CFLAGS): Add $(REGEX_CFLAGS).

	* configure.in (--with-included-regex): New switch.
	(REGEX): New. Subsstitue @REGEX@ in Makefile.in.
	(REGEX_CFLAGS): New. Subsstitue @REGEX_CFLAGS@ in Makefile.in.
	* configure: Regenerated.
